--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   client:
     build:
@@ -16,3 +14,9 @@ services:
       - "3000:3000"
     env_file:
       - ./server/.env
+
+  mongo:
+    image: mongo
+    container_name: mongo-container
+    ports:
+      - "27017:27017"
