--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "mongoose": "^8.3.1",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "redis": "^4.6.13",
+    "@socket.io/redis-adapter": "^8.3.0"
   },
   "devDependencies": {
     "typescript": "5.3.3"
