--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc -b",
     "start": "node dist/index",
-    "dev": "npm run build && npm run start"
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +22,8 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
+    "@types/node": "^20.0.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "5.3.3"
   }
 }
