--- a/server/package.json
+++ b/server/package.json
@@ -14,13 +14,17 @@
   "license": "ISC",
   "dependencies": {
     "@socket.io/redis-adapter": "^8.3.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
     "mongoose": "^8.3.1",
+    "rate-limit-redis": "^4.3.1",
     "redis": "^4.6.13",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/node": "^20.0.0",
     "ts-node-dev": "^2.0.0",
