--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       dockerfile: Dockerfile
     image: myapp-client:1.0
     ports:
-      - "12354:80"      
+      - "5173:80"      
     env_file:
       - ./client/.env
     depends_on:
@@ -47,7 +47,7 @@ services:
         max-file: "5"
 
   mongo:
-    image: mongo:6
+    image: mongo:latest
     volumes:
       - mongo-data:/data/db
     expose:
