feat: Implement theme toggle functionality and improve UI components
- Added ThemeToggle component for switching between light, dark, and system themes.
- Integrated theme context to manage theme state across the application.
- Updated TextEditor and Topbar components to use Tailwind CSS for styling.
- Enhanced button styles for better accessibility and user experience.
- Introduced caching mechanism for document retrieval using Redis.
- Implemented rate limiting for HTTP API and WebSocket connections.
- Added cache statistics endpoint for monitoring cache performance.
- Updated document controller to utilize caching for document reads and writes.
- Improved socket handling to extend cache TTL during active document viewing.
- Updated Docker configuration for MongoDB and client service ports.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       dockerfile: Dockerfile
     image: myapp-client:1.0
     ports:
-      - "5173:80"      
+      - "12354:80"      
     env_file:
       - ./client/.env
     depends_on:
@@ -47,7 +47,7 @@ services:
         max-file: "5"
 
   mongo:
-    image: mongo:latest
+    image: mongo:6
     volumes:
       - mongo-data:/data/db
     expose:
