--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "quill": "^2.0.0-rc.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.3",
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.3.0",
