--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
         max-file: "5"
 
   mongo:
-    image: mongo:6
+    image: mongo:latest
     volumes:
       - mongo-data:/data/db
     expose:
