--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,53 +1,71 @@
 # server/Dockerfile
 
-# 1) Install deps
-FROM node:20-alpine AS deps
+# 1) Build stage - install all deps and build
+FROM node:20-alpine AS builder
 WORKDIR /app
+
 COPY package.json package-lock.json ./
 RUN npm ci --production=false
 
-# 2) Build (nếu bạn có bước build như tsc / babel)
-FROM node:20-alpine AS builder
-WORKDIR /app
-COPY --from=deps /app/node_modules ./node_modules
 COPY . .
-# nếu có script build (ví dụ tsc), chạy nó; nếu không có, lệnh này không phá vỡ (yêu cầu script build tồn tại)
-RUN if [ -f package.json ] && grep -q "\"build\":" package.json; then npm run build; fi
+RUN npm run build
 
-# 3) Production image with Chromium for Puppeteer
+# 2) Production dependencies stage
+FROM node:20-alpine AS deps
+WORKDIR /app
+COPY package.json package-lock.json ./
+RUN npm ci --omit=dev && npm cache clean --force
+
+# 3) Minimal production image
 FROM node:20-alpine AS production
 WORKDIR /app
 
-# Install Chromium and dependencies for Puppeteer
+# Install only essential Chromium packages
 RUN apk add --no-cache \
     chromium \
     nss \
     freetype \
     harfbuzz \
     ca-certificates \
-    ttf-freefont \
-    font-noto \
-    font-noto-cjk
+    && rm -rf /var/cache/apk/* \
+    && rm -rf /usr/share/man/* \
+    && rm -rf /tmp/*
 
 # Tell Puppeteer to use installed Chromium
 ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
-    PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
+    PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser \
+    NODE_ENV=production \
+    PORT=3000
 
-# tạo user non-root
+# Create non-root user
 RUN addgroup -S appgroup && adduser -S appuser -G appgroup
 
-ENV NODE_ENV=production
-# mặc định BE lắng nghe PORT 3000 nếu không set
-ENV PORT=3000
+# Copy only production dependencies from deps stage
+COPY --from=deps --chown=appuser:appgroup /app/node_modules ./node_modules
 
-# copy với --chown để set ownership ngay lúc copy (tránh chown -R chậm)
-COPY --chown=appuser:appgroup --from=builder /app ./
+# Copy built files
+COPY --from=builder --chown=appuser:appgroup /app/dist ./dist
+COPY --chown=appuser:appgroup package.json ./
+
+# Clean up node_modules aggressively
+RUN find ./node_modules -type f -name "*.md" -delete && \
+    find ./node_modules -type f -name "*.ts" -delete && \
+    find ./node_modules -type f -name "*.map" -delete && \
+    find ./node_modules -type d -name "__tests__" -exec rm -rf {} + 2>/dev/null || true && \
+    find ./node_modules -type d -name "test" -exec rm -rf {} + 2>/dev/null || true && \
+    find ./node_modules -type d -name "tests" -exec rm -rf {} + 2>/dev/null || true && \
+    find ./node_modules -type d -name "*.ts" -exec rm -rf {} + 2>/dev/null || true && \
+    find ./node_modules -type d -name "docs" -exec rm -rf {} + 2>/dev/null || true && \
+    find ./node_modules -type d -name "example" -exec rm -rf {} + 2>/dev/null || true && \
+    find ./node_modules -type d -name "examples" -exec rm -rf {} + 2>/dev/null || true && \
+    find ./node_modules -type f -name "*.spec.js" -delete && \
+    find ./node_modules -type f -name "*.test.js" -delete && \
+    find ./node_modules -type f -name "LICENSE*" -delete && \
+    find ./node_modules -type f -name "CHANGELOG*" -delete && \
+    rm -rf ./node_modules/.cache
 
 USER appuser
 
-# container port (khuyến nghị 3000)
 EXPOSE 3000
 
-# CMD: nếu có script start sẽ chạy npm run start, nếu không, fallback sang npm run dev
-# (shell form để hỗ trợ fallback đơn giản)
-CMD sh -c 'if npm run | grep -q " start"; then npm run start; else npm run dev; fi'
+CMD ["node", "dist/index.js"]
